# sdl2-web-starter

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  index.html  main.cc  run.sh
